[FIX] visibility issues

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,7 +21,9 @@
     --foreground: #ededed;
   }
 }
-
+html{
+  overflow: hidden;
+}
 body {
   background: var(--background);
   color: var(--foreground);
